# meddx

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 3468734894c4_initial_schema.py
app/: streamlit_app.py
docs/adr/: 0001-record-architecture-decisions.md  0002-qdrant-vector-db.md  0003-multi-provider-llm-via-langchain.md  0004-local-bge-m3-embeddings.md  0005-langgraph-orchestration.md  0006-langfuse-self-hosted-observability.md  0007-mysql-for-users-and-records.md  README.md
docs/architecture/: presentation.html  system-architecture-overview.md
scripts/: corpus_reset.py  corpus_status.py  ingest.py  run_demo.py  run_eval.py
src/meddx/: config.py
src/meddx/agents/: __init__.py  devils_advocate.py  evidence.py  hypothesis.py  intake.py  root_cause.py  synthesis.py
src/meddx/db/: __init__.py  base.py  models.py  repositories.py  session_store.py
src/meddx/graph/: __init__.py  build.py
src/meddx/ingestion/: __init__.py  chunker.py  europe_pmc.py  ncbi.py
src/meddx/llm/: __init__.py  factory.py  observability.py
src/meddx/prompts/: __init__.py  devils_advocate.md  evidence.md  hypothesis.md  intake.md  root_cause.md  synthesis.md
src/meddx/rag/: __init__.py  citations.py  embedder.py  retriever.py  store.py
src/meddx/schemas/: __init__.py  models.py  (+1 more)
tests/: conftest.py  test_db.py  test_evidence_agent.py  test_graph.py  test_hypothesis_agent.py  test_ingestion.py  test_intake_gate.py  test_llm_factory.py  test_remaining_agents.py
