[project]
name = "meddx"
version = "0.1.0"
description = "Multi-agent RAG system countering cognitive biases in differential diagnosis (medical education)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Orchestration & LLM abstraction
    "langchain>=0.3",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-ollama>=0.3",
    # Observability
    "langfuse>=2.60",
    # RAG
    "qdrant-client>=1.12",
    "FlagEmbedding>=1.3",          # BGE-M3 (dense + sparse), GPU via torch
    # Relational storage
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "alembic>=1.13",
    # App & utils
    "streamlit>=1.40",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meddx"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
